--- a/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/Chart.yaml
+++ b/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: my-service
+name: semantic-versioning-on-docker-build-and-helm-chart
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
