--- a/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/deployment.yaml
+++ b/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "my-service.fullname" . }}
+  name: {{ include "semantic-versioning-on-docker-build-and-helm-chart.fullname" . }}
   labels:
-    {{- include "my-service.labels" . | nindent 4 }}
+    {{- include "semantic-versioning-on-docker-build-and-helm-chart.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "my-service.selectorLabels" . | nindent 6 }}
+      {{- include "semantic-versioning-on-docker-build-and-helm-chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "my-service.selectorLabels" . | nindent 8 }}
+        {{- include "semantic-versioning-on-docker-build-and-helm-chart.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "my-service.serviceAccountName" . }}
+      serviceAccountName: {{ include "semantic-versioning-on-docker-build-and-helm-chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -52,7 +52,8 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 5
             timeoutSeconds: 5
-            failureThreshold: 5          resources:
+            failureThreshold: 5
+          resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
