--- a/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/hpa.yaml
+++ b/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "my-service.fullname" . }}
+  name: {{ include "semantic-versioning-on-docker-build-and-helm-chart.fullname" . }}
   labels:
-    {{- include "my-service.labels" . | nindent 4 }}
+    {{- include "semantic-versioning-on-docker-build-and-helm-chart.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "my-service.fullname" . }}
+    name: {{ include "semantic-versioning-on-docker-build-and-helm-chart.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
