--- a/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/ingress.yaml
+++ b/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "my-service.fullname" . -}}
+{{- $fullName := include "semantic-versioning-on-docker-build-and-helm-chart.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
@@ -10,7 +10,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "my-service.labels" . | nindent 4 }}
+    {{- include "semantic-versioning-on-docker-build-and-helm-chart.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
