--- a/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/serviceaccount.yaml
+++ b/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "my-service.serviceAccountName" . }}
+  name: {{ include "semantic-versioning-on-docker-build-and-helm-chart.serviceAccountName" . }}
   labels:
-    {{- include "my-service.labels" . | nindent 4 }}
+    {{- include "semantic-versioning-on-docker-build-and-helm-chart.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
