--- a/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/values.yaml
+++ b/src/main/helm/semantic-versioning-on-docker-build-and-helm-chart/values.yaml
@@ -1,12 +1,13 @@
-# Default values for my-service.
+# Default values for semantic-versioning-on-docker-build-and-helm-chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: docker.io/chemesev/my-service
+  repository: docker.io/chemesev/semantic-versioning-on-docker-build-and-helm-chart
   pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
 imagePullSecrets: []
